--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "report-maker",
   "version": "0.0.0",
-  "description": "node.js app for generating reports from mysql databases",
+  "description": "node.js app for generating cvs reports from mysql databases",
   "main": "report-maker.js",
   "homepage": "https://github.com/joshuatrii/report-maker",
   "scripts": {
