--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "albedo.js",
   "homepage": "https://github.com/punkave/albedo",
   "scripts": {
-    "test": "test"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
