--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "underscore": "^1.7.0"
   },
   "devDependencies": {
-    "mocha": "~1.20.0",
-    "chai": "~1.9.1"
+    "mocha": "*",
+    "chai": "*"
   }
 }
