--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/punkave/albedo/issues"
   },
   "dependencies": {
-    "json2csv": "mkopinsky/json2csv#master",
+    "json2csv": "~3.11.0",
     "moment": "~2.6.0",
     "mysql": "~2.2.0",
     "underscore": "^1.7.0"
